# letters

./: .gitignore  Pipfile  README.md  package-lock.json  package.json  parsearticle.js  pyproject.toml  requirements.txt
newsletters/: admin.py  apps.py  forms.py  models.py  tasks.py  views.py
newsletters/management/commands/: sync_and_send.py
newsletters/migrations/: 0001_initial.py  0002_source_newsletter.py  0003_auto_20170730_1834.py  0004_auto_20170806_2032.py  0005_auto_20170806_2033.py  0006_auto_20170806_2035.py  0007_auto_20190704_1011.py
newsletters/static/: app.css
newsletters/templates/: base.html  dashboard.html  email.html
newsletters/templates/registration/: logged_out.html  login.html
project/: celery.py  settings.py  urls.py  wsgi.py
